класс LauncherUI разделён на несколько подклассов для удобства, начат перенос интерфейса в css файлы